name:                aika
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MicheleRiva/aika#readme
license:             BSD3
license-file:        LICENSE
author:              Michele Riva
maintainer:          ciao@micheleriva.it
copyright:           MIT
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aika
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, stm, network, containers, mtl, transformers,
                       attoparsec, bytestring
